--- a/index.html
+++ b/index.html
@@ -37,11 +37,44 @@
 
 <p>Note: you must have Java and JavaScript enabled to play this game in your browser.</p>
 
+<script type="text/javascript">
+<!--//--><![CDATA[// ><!--
 
 
+  s = '' + window.location
+  i = s.lastIndexOf('?map=')
+  if (i == -1) {
+    map = 'default'
+  } else {
+    map = s.substr(i + 5)
+  }
+  //document.write('map=' + map)
+  document.write('<applet code="JGLBabalApplet.class" width="320" height="240" archive="http://s3.amazonaws.com/borsboom-downloads/babal/babal_applet.jar"><param name="map" value="http://s3.amazonaws.com/borsboom-downloads/babal/data/' + map + '.map" /><' + '/applet>')
+
+
+//--><!]]>
+</script><applet code="JGLBabalApplet.class" archive="http://s3.amazonaws.com/borsboom-downloads/babal/babal_applet.jar" height="240" width="320"><param name="map" value="http://s3.amazonaws.com/borsboom-downloads/babal/data/default.map"></applet></p>
+<form action="babal" method="get">
 <p>
 Map: 
----Choose---DefaultBackwardBrushFrankHolesJumpMazeSpeed</p>
+<select name="map" onchange="document.forms[1].submit()"><option value="default">---Choose---</option><option value="default">Default</option><option value="backward">Backward</option><option value="brush">Brush</option><option value="frank">Frank</option><option value="holes">Holes</option><option value="jump">Jump</option><option value="maze">Maze</option><option value="speed">Speed</option></select><input value="Select" type="submit"></p>
+</form>
+<script type="text/javascript">
+<!--//--><![CDATA[// ><!--
+//<![CDATA[
+
+  sel = document.forms[0].map
+  j = 0
+  for (i = 0; i < sel.options.length; i++) {
+    if (sel.options[i].value == map) {
+      j = i
+    }
+  }
+  document.forms[0].map.selectedIndex = j
+
+//]]]]><![CDATA[>
+//--><!]]>
+</script>
 
 <p>Goal: Don't fall into the holes!<br>
 Keys: </p>
