--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     map = s.substr(i + 5)
   }
   //document.write('map=' + map)
-  document.write('<applet code="JGLBabalApplet.class" width="320" height="240" archive="/downloads/babal/babal_applet.jar"><param name="map" value="/downloads/babal/data/' + map + '.map" /><' + '/applet>')
+  document.write('<applet code="JGLBabalApplet.class" width="320" height="240" archive="http://s3.amazonaws.com/borsboom-downloads/babal/babal_applet.jar"><param name="map" value="http://s3.amazonaws.com/borsboom-downloads/babal/data/' + map + '.map" /><' + '/applet>')
 </script>
 </p>
 <form action="babal" method="get">
