--- a/index.html
+++ b/index.html
@@ -35,72 +35,13 @@
 
 <p>Babal is a simple 3-D game based on <a href="http://www.ufoot.org/babal/">Babal for HP48</a> by U-Foot, which was my favorite HP48 game.  You can play it in your browser window, or stand-alone.  I created this to learn a bit about OpenGL and to experiment with writing a game using a scripting language (Python), and experiment with Jython for creating Java programs.</p>
 
-<p>Note: you must have Java and JavaScript enabled to play this game in your browser.</p>
+<p><a href="http://downloads.borsboom.io/babal/babal_applet.html">Play it in your browser.</a></p>
 
-<script type="text/javascript">
-  s = '' + window.location
-  i = s.lastIndexOf('?map=')
-  if (i == -1) {
-    map = 'default'
-  } else {
-    map = s.substr(i + 5)
-  }
-  //document.write('map=' + map)
-  document.write('<applet code="JGLBabalApplet.class" width="320" height="240" archive="http://s3.amazonaws.com/borsboom-downloads/babal/babal_applet.jar"><param name="map" value="http://s3.amazonaws.com/borsboom-downloads/babal/data/' + map + '.map" /><' + '/applet>')
-</script>
-</p>
-<form action="babal" method="get">
-<p>
-Map: 
-<select name="map" onchange="document.forms[1].submit()">
-<option value="default">---Choose---</option>
-<option value="default">Default</option>
-<option value="backward">Backward</option>
-<option value="brush">Brush</option>
-<option value="frank">Frank</option>
-<option value="holes">Holes</option>
-<option value="jump">Jump</option>
-<option value="maze">Maze</option>
-<option value="speed">Speed</option>
-</select>
-<input type="submit" value="Select">
-</p>
-</form>
-<script type="text/javascript">//<![CDATA[
-  sel = document.forms[0].map
-  j = 0
-  for (i = 0; i < sel.options.length; i++) {
-    if (sel.options[i].value == map) {
-      j = i
-    }
-  }
-  document.forms[0].map.selectedIndex = j
-//]]></script>
-
-<p>Goal: Don't fall into the holes!<br>
-Keys: </p>
-
-<ul>
-<li>
-<code>space</code> jump<br>
-</li>
-<li>
-<code>up</code> speed up<br>
-</li>
-<li>
-<code>down</code> slow down<br>
-</li>
-<li>
-<code>left</code> strafe left</li>
-<li>
-<code>right</code> strafe right</li>
-<li>
-<code>P</code> pause</li>
-</ul><p>See <a href="https://github.com/borsboom/babal/blob/master/README.txt">README.txt</a> for instructions and copyright.<br>
+<p>See <a href="https://github.com/borsboom/babal/blob/master/README.txt">README.txt</a> for instructions and copyright.<br>
 See <a href="https://github.com/borsboom/babal/blob/master/COPYING.txt">COPYING.txt</a> for the license.<br>
 See <a href="https://github.com/borsboom/babal/blob/master/CHANGELOG.txt">CHANGELOG.txt</a> for the log of changes.<br>
 Get the source code on <a href="https://github.com/borsboom/babal">Github</a><br>
-Download the Windows executable: <a href="http://s3.amazonaws.com/borsboom-downloads/babal/babal-win32.zip">babal-win32.zip</a></p>
+Download the Windows executable: <a href="http://downloads.borsboom.io/babal/babal-win32.zip">babal-win32.zip</a></p>
 
 <p>If the game applet does not appear above, or it runs very slowly, or there are graphics glitches, try any one of these options:</p>
 
