--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Babal by borsboom</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Babal : A simple 3-D game based on Babal for HP48 by U-Foot." />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Babal</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Babal</h1>
-        <p>A simple 3-D game based on Babal for HP48 by U-Foot.</p>
 
-        <p class="view"><a href="https://github.com/borsboom/babal">View the Project on GitHub <small>borsboom/babal</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/borsboom/babal">View on GitHub</a>
 
+          <h1 id="project_title">Babal</h1>
+          <h2 id="project_tagline">A simple 3-D game based on Babal for HP48 by U-Foot.</h2>
 
-        <ul>
-          <li><a href="https://github.com/borsboom/babal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/borsboom/babal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/borsboom/babal">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/borsboom/babal/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/borsboom/babal/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p><strong>Project status:</strong> no longer under development, but still playable and fun.<br><strong>Developed:</strong> 2003</p>
 
 <p>Babal is a simple 3-D game based on <a href="http://www.ufoot.org/babal/">Babal for HP48</a> by U-Foot, which was my favorite HP48 game.  You can play it in your browser window, or stand-alone.  I created this to learn a bit about OpenGL and to experiment with writing a game using a scripting language (Python), and experiment with Jython for creating Java programs.</p>
 
-<p><a href="http://downloads.borsboom.io/babal/babal_applet.html">Play it in your browser.</a></p>
+<p><a href="http://downloads.borsboom.io/babal/babal_applet.html"><img src="http://assets.borsboom.io/babal/screen_shot.png" alt="Babal screen shot"></a><br><a href="http://downloads.borsboom.io/babal/babal_applet.html">Play Babal in your browser</a></p>
 
 <p>See <a href="https://github.com/borsboom/babal/blob/master/README.txt">README.txt</a> for instructions and copyright.<br>
 See <a href="https://github.com/borsboom/babal/blob/master/COPYING.txt">COPYING.txt</a> for the license.<br>
@@ -48,12 +51,17 @@ Download the Windows executable: <a href="http://downloads.borsboom.io/babal/bab
 <li>Other platforms can download the source code and run it using Python.</li>
 </ul>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/borsboom">borsboom</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Babal maintained by <a href="https://github.com/borsboom">borsboom</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
